feat: new otp implementation with zenziva
