# app/dto/auth/otp_request_dto.go
@@ -1,0 +1,5 @@
+package authdto
+
+type OtpRequest struct {
+	PhoneNumber string `json:"phone_number" validate:"required,e164"`
+}
