# app/dto/auth/otp_validate_request_dto.go
@@ -1,0 +1,6 @@
+package authdto
+
+type OtpValidateRequest struct {
+	PhoneNumber string `json:"phone_number" validate:"required,e164"`
+	Otp         string `json:"otp" validate:"required"`
+}
