# pkg/Integrations/otp/dto/otp_request_dto.go
@@ -1,0 +1,9 @@
+package dto
+
+type OtpRequest struct {
+	Userkey string `json:"userkey"`
+	Passkey string `json:"passkey"`
+	To      string `json:"to"`
+	Brand   string `json:"brand"`
+	Otp     string `json:"otp"`
+}
